debugging on form

--- a/Reservation_from.html
+++ b/Reservation_from.html
@@ -12,7 +12,7 @@
     <section>
         <h1>Travel reservation from</h1>
         <h2>*donotes mandotory</h2>
-        <from>
+        <form>
             <label for="name">Full name*:</label>
             <br>
             <input type="text" name="name" id="name" placeholder="FirstName LastName" required>
@@ -59,7 +59,7 @@
             <label for="condition_radio">I disagree</label>
             <br>
             <input type="submit" value="Complete reservation">
-        </from>
+        </form>
     </section>
 </body>
 
