--- a/Reservation_from.html
+++ b/Reservation_from.html
@@ -42,10 +42,10 @@
             <input type="checkbox" name="avil1" id="avil1" value="Boarding" >
             <br>
             <label for="avil2">Fooding</label>
-            <input type="checkbox" name="avil2" id="avil2" value="Boarding" >
+            <input type="checkbox" name="avil2" id="avil2" value="Fooding" >
             <br>
             <label for="avil3">Sight seeing</label>
-            <input type="checkbox" name="avil3" id="avil3" value="Boarding" >
+            <input type="checkbox" name="avil3" id="avil3" value="Sight seeing" >
             <br>
             <label for="coupon">Discout Coupon code:</label>
             <br>
